[project]
name = "neulander-api"
description = "A FastAPI based API for the NeuLANDER project"
readme = "README.md"
authors = [{ name = "vvcb", email = "vvcb.n1@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "faststream[rabbit]>=0.5.33",
    "neulander-core",
]
dynamic = ["version"]

[project.scripts]
neulander-api = "neulander_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/neulander_api/__init__.py"

[dependency-groups]
dev = [
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.24.0",
    "jupyterlab>=4.3.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
]

[tool.uv.sources]
neulander-core = { path = "../core" }
